--- a/src/main/resources/application-webgoat.properties
+++ b/src/main/resources/application-webgoat.properties
@@ -8,6 +8,8 @@ webgoat.host=${WEBGOAT_HOST:127.0.0.1}
 webgoat.port=${WEBGOAT_PORT:8080}
 webgoat.context=${WEBGOAT_CONTEXT:/WebGoat}
 spring.application.name=WebGoat
+security.cookie.secure=true
+server.ssl.enabled=false
 
 server.ssl.key-store-type=${WEBGOAT_KEYSTORE_TYPE:PKCS12}
 server.ssl.key-store=${WEBGOAT_KEYSTORE:classpath:goatkeystore.pkcs12}
