feat: vuln url ssr

--- a/src/main/resources/application-webgoat.properties
+++ b/src/main/resources/application-webgoat.properties
@@ -9,6 +9,11 @@ webgoat.port=${WEBGOAT_PORT:8080}
 webgoat.context=${WEBGOAT_CONTEXT:/WebGoat}
 spring.application.name=WebGoat
 security.cookie.secure=true
+
+# JWT Security Configuration
+webgoat.jwt.validate-urls=true
+webgoat.jwt.strict-mode=false
+
 server.ssl.enabled=false
 
 server.ssl.key-store-type=${WEBGOAT_KEYSTORE_TYPE:PKCS12}
